# agent-dungeon

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_column.py  agent_panel.py  agent_py_preview.py  app.py  bootstrap_config.py  cloud_paths.py  dungeon_context.py  dungeon_shell.py  env_loader.py  fly.toml  forge_runner.py  mission_complete_ui.py  page_bootstrap.py  page_shell.py  progress.py  pyproject.toml  section_heading_ui.py  shell_ui.py  sidebar_nav.py  skill_forge_ui.py  skills_panel.py
.streamlit/: config.toml
auth/: __init__.py  gate.py  google_oauth.py  session.py
config/: fly.secrets.env.example  local.env.example
docs/: LOCAL_DEV.md  deploy-fly.md  google-oauth-setup.md
pages/: 0_Voice.py  1_Home.py
quests/: quests.yaml
scripts/: check_chatinput_theme.py  deploy-fly.ps1  entrypoint.sh  run-local.ps1  verify_streamlit_startup.py  verify_ui_theme_e2e.py
static/: login.css
tests/: test_agent_panel_helpers.py  test_agent_py_preview.py  test_agent_py_store.py  test_agent_terminal.py  test_bootstrap_config.py  test_brain_progress.py  test_brain_runner.py  test_brain_skill_forge.py  test_brain_validator.py  test_challenge_codes.py  test_cloud_paths.py  test_code_checks.py  test_cookie_session.py  test_dungeon_context.py  test_forge_agent_py_sync.py  test_forge_inline_terminal.py  test_forge_inline_terminal_visibility.py  test_forge_lab_defaults.py  test_forge_runner.py  test_forge_sanitize.py  test_forge_session.py  test_forge_terminal_html.py  test_forge_terminal_processing.py  test_forge_terminal_unified_display.py  test_google_oauth.py  test_graduation_export.py  test_llm_provider.py  (+12 more)
(+51 files in other folders)
